// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload should drop file to dropzone input 1`] = `
<div>
  <div
    class="w-full"
    data-testid="file-upload"
  >
    <div
      class="mx-auto w-full flex items-center justify-start align-middle p-2 my-10"
      data-testid="uploaded-file"
    >
      <div
        class="text-center font-sans font-semibold mx-4 hover:text-blue-500"
        data-testid="uploaded-label"
      >
        Uploaded file
      </div>
      <div
        class="font-sans text-justify text-gray-600"
        data-testid="uploaded-file-details"
      >
        ping.png
         - 
        4
         bytes
      </div>
      <div
        class="pt-2 ml-2"
      >
        <button
          aria-label="Remove file"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium sc-dkPtRN cYtIRe css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          data-testid="remove-file"
          tabindex="0"
          type="button"
        >
          <svg
            class="cursor-pointer text-red-600 font-sans text-3xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm192 472c0 4.4-3.6 8-8 8H328c-4.4 0-8-3.6-8-8v-48c0-4.4 3.6-8 8-8h368c4.4 0 8 3.6 8 8v48z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload should render file upload input 1`] = `
<div>
  <div
    class="w-full"
    data-testid="file-upload"
  >
    <div
      class="block border-2 p-8 border-dashed rounded-md border-gray-400 shadow-md outline-blue-200 cursor-pointer active:bg-blue-50 hover:bg-blue-50 hover:border-blue-200 active:text-blue-500 dropzone"
      role="presentation"
      tabindex="0"
    >
      <input
        class=""
        data-testid="upload-input"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <div
        class="font-sans text-gray-600 text-center mx-auto hover:text-blue-500"
        data-testid="upload-message"
      >
        Drag and drop to upload the file
      </div>
      <div
        class="font-light font-sans text-gray-500 text-center text-sm italic my-2"
        data-testid="upload-size-hint"
      >
        Max upload size : 5 MB
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload should render file upload input for edit mode 1`] = `
<div>
  <div
    class="w-full"
    data-testid="file-upload"
  >
    <div
      class="mx-auto w-full flex items-center justify-start align-middle p-2 my-10"
      data-testid="uploaded-file"
    >
      <div
        class="text-center font-sans font-semibold mx-4 hover:text-blue-500"
        data-testid="uploaded-label"
      >
        Uploaded file
      </div>
      <button
        class="flex items-center justify-center gap-1 px-9 py-2 shadow-md rounded-sm text-center text-base font-semibold outline-none cursor-pointer hover:brightness-110 transition duration-100 text-white w-fit bg-blue-500"
        data-testid="download-file-1"
      >
        <svg
          class="text-xl"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505.7 661a8 8 0 0 0 12.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
          />
        </svg>
        Download file
      </button>
      <div
        class="pt-2 ml-2"
      >
        <button
          aria-label="Remove file"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium sc-dkPtRN cYtIRe css-78trlr-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          data-testid="remove-file"
          tabindex="0"
          type="button"
        >
          <svg
            class="cursor-pointer text-red-600 font-sans text-3xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 1024 1024"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm192 472c0 4.4-3.6 8-8 8H328c-4.4 0-8-3.6-8-8v-48c0-4.4 3.6-8 8-8h368c4.4 0 8 3.6 8 8v48z"
            />
          </svg>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload should show error when file size is greater than 5MB 1`] = `
<div>
  <div
    class="w-full"
    data-testid="file-upload"
  >
    <div
      class="block border-2 p-8 border-dashed rounded-md border-gray-400 shadow-md outline-blue-200 cursor-pointer active:bg-blue-50 hover:bg-blue-50 hover:border-blue-200 active:text-blue-500 dropzone"
      role="presentation"
      tabindex="0"
    >
      <input
        class=""
        data-testid="upload-input"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <div
        class="font-sans text-gray-600 text-center mx-auto hover:text-blue-500"
        data-testid="upload-message"
      >
        Drag and drop to upload the file
      </div>
      <div
        class="font-light font-sans text-gray-500 text-center text-sm italic my-2"
        data-testid="upload-size-hint"
      >
        Max upload size : 5 MB
      </div>
      <div
        class="font-sans text-red-500 text-center mx-auto my-2"
        data-testid="upload-error"
      >
        The file size is too large. Max size is 5MB
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload should show error when file type is not valid 1`] = `
<div>
  <div
    class="w-full"
    data-testid="file-upload"
  >
    <div
      class="block border-2 p-8 border-dashed rounded-md border-gray-400 shadow-md outline-blue-200 cursor-pointer active:bg-blue-50 hover:bg-blue-50 hover:border-blue-200 active:text-blue-500 dropzone"
      role="presentation"
      tabindex="0"
    >
      <input
        class=""
        data-testid="upload-input"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <div
        class="font-sans text-gray-600 text-center mx-auto hover:text-blue-500"
        data-testid="upload-message"
      >
        Drag and drop to upload the file
      </div>
      <div
        class="font-light font-sans text-gray-500 text-center text-sm italic my-2"
        data-testid="upload-size-hint"
      >
        Max upload size : 5 MB
      </div>
      <div
        class="font-sans text-red-500 text-center mx-auto my-2"
        data-testid="upload-error"
      >
        The file type jpeg is not allowed for application/pdf
      </div>
    </div>
  </div>
</div>
`;
